--- a/style.css
+++ b/style.css
@@ -1,52 +1,42 @@
 * {
+    padding: 0;
     margin: 0;
+    box-sizing: border-box;
   }
 
-  body {
-    background-image: url('./images/Modern-Blue-Web-Site-Background-Graphics-5332399-1.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-  }
   .main {
     background-color: hsl(212, 45%, 89%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 1440px;
-    height: 700px;
+    height: 100vh;
   }
 
   .conteudo {
-    padding: 10px;
+    padding: 17px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background-color: hsl(0, 0%, 100%);
     border-radius: 5%;
     width: 300px;
-    height: 450px;
+    height: 465px;
+    box-shadow: 0px 5px 10px hsl(218, 44%, 22%, 0.1);
   }
 
   .conteudo img {
     border-radius: 5%;
-    padding: 10px;
   }
   .texto{
     display: flex;
-    flex-direction: column;
     gap: 10px;
-    padding: 20px;
+    margin: 20px;
+    flex-direction: column;
     font-family: 'Outfit', sans-serif;
   }
   .texto h1{
-    font-size: 20px;
+    font-size: 19px;
     font-weight: bold;
     text-align: center;
     color: hsl(218, 44%, 22%);
@@ -57,49 +47,32 @@
     text-align: center;
   }
   .attribution {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 15px; 
-    text-align: left; 
-    color: white;
+    text-align: center; 
+    color: blue;
   }
     
   .attribution a { color: red; }
 
   @media (max-width: 412px) {    
-    .main {
-      width: 100%;
-      height: 100%; 
-    }
-
     .conteudo {
       width: 320px;
       height: 470px;
     }
-
-
-    .attribution {
-      display: none;
-    }
   }
 
   @media (orientation:landscape) and (max-height: 412px) {
-    body {
-      width: 100vw;
-      height: 100%;
-    }
     .main {
-      width: 100%;
-      height: 100%;
+      overflow: auto;
     }
-
     .conteudo {
-      width: 30%;
-      height: 100%;
-      margin: 20px;
+      margin-top: 100px;
+      margin-bottom: 20px;
     }
-    .texto{
-    padding: 10px;
-  }
-
     .attribution {
       display: none;
     }
